Fix doubled right border on mobile as there is a box-shadow

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -703,6 +703,14 @@
           }
         }
       }
+
+      .pb_advanced_table_header {
+        > tr {
+          .last-header-cell:last-of-type {
+            border-right-width: 0 !important;
+          }
+        }
+      }
     }
   }
 
